[metadata]
name = moka-jcci
author = singein
author-email = singein@qq.com
summary = awsome project created by pycman.
license = MIT
description-file =
    README.rst
home-page = https://github.com/Singein/jcci
requires-python = >= 3.9

[files]
packages =
    moka-jcci

[options]
packages = find:
package_data =
    jcci = result-template.html

[entry_points]
console_scripts =
    compare=jcci.cli:entry